Replaced List.of which were missed in the first round (#271)